; ModuleID = '/home/carl/AnghaBench/linux/drivers/extcon/extr_extcon-usbc-cros-ec.c_cros_ec_usb_power_type_string.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/extcon/extr_extcon-usbc-cros-ec.c_cros_ec_usb_power_type_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [18 x i8] c"USB_CHG_TYPE_NONE\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"USB_CHG_TYPE_PD\00", align 1
@.str.2 = private unnamed_addr constant [25 x i8] c"USB_CHG_TYPE_PROPRIETARY\00", align 1
@.str.3 = private unnamed_addr constant [15 x i8] c"USB_CHG_TYPE_C\00", align 1
@.str.4 = private unnamed_addr constant [22 x i8] c"USB_CHG_TYPE_BC12_DCP\00", align 1
@.str.5 = private unnamed_addr constant [22 x i8] c"USB_CHG_TYPE_BC12_CDP\00", align 1
@.str.6 = private unnamed_addr constant [22 x i8] c"USB_CHG_TYPE_BC12_SDP\00", align 1
@.str.7 = private unnamed_addr constant [19 x i8] c"USB_CHG_TYPE_OTHER\00", align 1
@.str.8 = private unnamed_addr constant [18 x i8] c"USB_CHG_TYPE_VBUS\00", align 1
@.str.9 = private unnamed_addr constant [21 x i8] c"USB_CHG_TYPE_UNKNOWN\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @cros_ec_usb_power_type_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @cros_ec_usb_power_type_string(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %15 [
    i32 133, label %5
    i32 131, label %6
    i32 130, label %7
    i32 134, label %8
    i32 136, label %9
    i32 137, label %10
    i32 135, label %11
    i32 132, label %12
    i32 128, label %13
    i32 129, label %14
  ]

5:                                                ; preds = %1
  store i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %16

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %16

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %16

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.3, i64 0, i64 0), i8** %2, align 8
  br label %16

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.4, i64 0, i64 0), i8** %2, align 8
  br label %16

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.5, i64 0, i64 0), i8** %2, align 8
  br label %16

11:                                               ; preds = %1
  store i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.6, i64 0, i64 0), i8** %2, align 8
  br label %16

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.7, i64 0, i64 0), i8** %2, align 8
  br label %16

13:                                               ; preds = %1
  store i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.8, i64 0, i64 0), i8** %2, align 8
  br label %16

14:                                               ; preds = %1
  store i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.9, i64 0, i64 0), i8** %2, align 8
  br label %16

15:                                               ; preds = %1
  store i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.9, i64 0, i64 0), i8** %2, align 8
  br label %16

16:                                               ; preds = %15, %14, %13, %12, %11, %10, %9, %8, %7, %6, %5
  %17 = load i8*, i8** %2, align 8
  ret i8* %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
